# py-comment-evolution

./: .gitignore  LICENSE  LICENSE-thesis  README.md  TODO  pipeline.py  pyproject.toml
.github/workflows/: ruff.yml
config/: exclusions.yaml  repos.yaml
data/metadata/: candidates.json  candidates.yaml  comment_block_parquet_columns.csv  provenance.jsonl  snapshots.csv
data/metadata/repo-selection/: initial_candidates_2000s.yaml  initial_candidates_2000s_snapshots.csv  initial_candidates_2020s.json  initial_candidates_2020s_sorted_by_size.json
docs/: methodology.md
scripts/calculate-results/: io_utils.py  run_results_pipeline.py
scripts/comment-extraction/: build-file-index.py  extract-docstring-comments.py  extract-token-comments.py
scripts/repo-census/: check-docs-py-files.py  repo-census.py  visualization.ipynb
scripts/repo-collection/: fetch-swh-no-vault.py  fetch-swh.py  resolve-snapshots.py
scripts/repo-selection/: append-candidate.py  append-initial-candidate.py  sort-initial-candidates.py
scripts/visualize-results/: visualize-am.py  visualize-density.py  visualize-lf.py  visualize-structure.py  visualize-td.py
tests/: biggest-blocks.py  check-am.py  check-text-vs-text-stripped.py  inline-full-line-ratio-comments.py  read-error-docstrings.py
tests/big_parquet/: output-file-with-parquet-columns.py  print-parquet-columns.py
tests/features/: check-am.py  check-cross-feature-blocks.py  check-lf.py  check-lh.py  check-more-cross-feature-blocks.py  check-sb.py  check-td.py
tests/results/: check-td-2000s-with-pragma.py
(+64 files in other folders)
